--- a/views/album.erb
+++ b/views/album.erb
@@ -19,12 +19,18 @@
     <label for="song_name">Song name</label>
     <input id="song_name" name="song_name" class="form-control" type="text">
   </div>
-  <button type="submit" class="btn">Add song</button>
+  <button type="submit" class="btn btn-success">Add song</button>
 </form>
 
 
 
 <p><a href="/albums/<%= @album.id %>/edit">Edit album</a></p>
+
+<form action="/albums/<%= @album.id %>/buy" method="post">
+    <input name="_method" type="hidden" value="patch">
+    <p><button type="submit" class="btn btn-success">Buy</button></p>
+</form>
+
 <p><a href="/albums">Return to album list</a></p>
 
 
